Cleaned up pom files and deleted unnecessary classes+modules+folders